--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Schools -- Fiction'
 - !lcsh 'Cricket -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: 'Pip : A Romance of Youth'
 url: http://www.gutenberg.org/ebooks/34136
